change Gemfile.lock content, remove jmcglone informations

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div class="header">
 	<ul class="nav nav-pills pull-right">
-		<li class="{{ page.projects }}"><a href="/projects" title="Research publications">Research publications</a></li>
+		<li class="{{ page.projects }}"><a href="/projects" title="Research life">Research life</a></li>
 		<li class="{{ page.cv }}"><a href="/cv" title="CV">CV</a></li>
-		<li class="{{ page.notes }}"><a href="/notes" title="Blog">Blog</a></li>
+		<li class="{{ page.blog }}"><a href="/blog" title="Blog">Blog</a></li>
 		<li class="{{ page.contact }}"><a href="/contact" title="Contact">Contact</a></li>
 	</ul>
 	<h3 class="text-muted"><a href="/">Méline Wery</a></h3>
