Change container padding values (15px to auto)

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -746,8 +746,8 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: auto; #15px
+  padding-left: auto;
   margin-right: auto;
   margin-left: auto;
 }
