--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -746,7 +746,7 @@ pre code {
 }
 
 .container {
-  padding-right: auto; #15px
+  padding-right: auto;
   padding-left: auto;
   margin-right: auto;
   margin-left: auto;
