--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -746,8 +746,8 @@ pre code {
 }
 
 .container {
-  padding-right: auto;
-  padding-left: auto;
+  padding-right: 5px;
+  padding-left: 5px;
   margin-right: auto;
   margin-left: auto;
 }
