--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -32,14 +32,14 @@ body {
 }
 
 /* Customize container */
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .container {
     max-width: 750px;
   }
 }
 .container-narrow > hr {
   margin: 30px 0;
-}
+}*/
 
 /* Main marketing message and sign up button */
 .jumbotron {
